# zero2prod

./: .env  .gitignore  Cargo.toml  configuration.yaml  note.MD
.sqlx/: query-cc424cd7793c6bd18190e44186a0a009f0d9de7a6c8811e045e6690d72cc1bee.json
configuration/: base.yaml
migrations/: 20250820030230_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: great.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
