[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.14"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7.0"
tracing = {version="0.1.41",features=["log"]}
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.19",features=["registry","env-filter"]}
uuid = {version="1.18.0",features=["v4"]}


[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.21.3"
reqwest = "0.12.23"
tokio = "1.47.1"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
"runtime-tokio",
"tls-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
